atualização do cod.

--- a/Projetos acabados/We Care/style.css
+++ b/Projetos acabados/We Care/style.css
@@ -1,13 +1,13 @@
 * {
     font-family: "Montserrat", serif;
     margin: 0;
-    padding: 0;
+    padding: 6px;
     box-sizing: border-box;
 
 }
 
 header {
-    margin: -200px 0 -170px 76px;
+    margin: -200px 0 -170px 176px;
 
 }
 
@@ -46,14 +46,14 @@ section {
 h1 {
     font-weight: 900;
     font-size: 100px;
-    line-height: 122px;
+    line-height: 52px;
     color: #515151;
 }
 
 h2 {
     font-weight: 500;
     font-size: 58px;
-    line-height: 71px;
+    line-height: 51px;
     color: #515151;
 }
 
@@ -62,9 +62,9 @@ p {
     font-size: 24px;
     line-height: 20px;
     color: #515151;
-    width: 315px;
-margin-top: 32px;
-margin-bottom: 65px;
+    width: 715px;
+    margin-top: 0px;
+    margin-bottom: 65px;
 }
 
 .botton-main {
@@ -77,8 +77,18 @@ margin-bottom: 65px;
     filter: drop-shadow(#3a2424)0, 4px, 4px;
     font-weight: 700;
     font-size: 28px;
-    line-height: 34px;
+    line-height: 50px;
     color: #000;
 
+}
+
+
+
+
+@media (max-width: 600px) {
+    .logo-image {
+        width: 490px;
+        height: 450px;
+    }
 
 }
